--- a/index.html
+++ b/index.html
@@ -6,18 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <meta name="Description" content="Put your description here.">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/images/logo.png">
+  <link rel="stylesheet" href="node_modules/lit-fontawesome/css/font.css">
   <base href="/">
+  <script src="https://kit.fontawesome.com/2c68a4b502.js" crossorigin="anonymous"></script>
 
-  <style>
-    html,
-    body {
-      /*margin: 0;*/
-      /*padding: 0;*/
-      /*font-family: sans-serif;*/
-      /*background-color: #ededed;*/
-    }
-  </style>
-  <title>colurful-changes-lit</title>
+
+  <title>colourful-changes-lit</title>
 </head>
 
 <body style="background-color: #c9b7a5;">
