--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+  <meta name="viewport" content="width=device-width,  initial-scale=1.0, viewport-fit=cover" />
   <meta name="Description" content="Put your description here.">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/images/logo.png">
   <link rel="stylesheet" href="node_modules/lit-fontawesome/css/font.css">
   <base href="/">
   <script src="https://kit.fontawesome.com/2c68a4b502.js" crossorigin="anonymous"></script>
+  <style>
+    @media only screen and (max-width: 500px) {
+      body {
+        width: 600px;
+      }
+    }
 
+  </style>
 
   <title>colourful-changes-lit</title>
 </head>
