--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,  initial-scale=1.0, viewport-fit=cover" />
+<!--  <meta name="viewport" content="width=device-width,  initial-scale=1.0, viewport-fit=cover" />-->
+  <meta name="viewport" content="width=device-width, initial-scale=0.5, user-scalable=no" />
   <meta name="Description" content="Put your description here.">
   <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/logo.png">
   <link rel="stylesheet" href="node_modules/lit-fontawesome/css/font.css">
